# ETL-financeiro-dbt-airflow

./: README.md  pyproject.toml
1_local_setup/: main.py
1_setup/: brapi_quotes.csv  docker-compose.yaml  load_postgres.py  main.py
2_warehouse/b3_cotacao/: dbt_project.yml  package-lock.yml  packages.yml
2_warehouse/b3_cotacao/models/staging/: _stg__models.yml  sources.yml  stg_cotacoes.sql
